[project]
name = "ezmsg-panel"
version = "0.4.0"
description = "Panel patterns for ezmsg systems"
authors = [
  { name = "Griffin Milsap", email = "griffin.milsap@gmail.com" }
]
readme = "README.md"
homepage = "https://github.com/griffinmilsap/ezmsg-panel"
requires-python = ">=3.10"
dependencies = [
    "ezmsg>=3.5.0",
    "panel>=1.5.3",
]

[project.optional-dependencies]
dependencies = [
    "ezmsg-sigproc>=1.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ezmsg"]
