[metadata]
name = ezmsg-panel
version = attr:ezmsg.panel.__version__
author = Griffin Milsap
author_email = griffin.milsap@jhuapl.edu
description = Panel integration for ezmsg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/griffinmilsap/ezmsg-panel
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.8
install_requires = 
    ezmsg>=3.2.0
    panel

[options.extras_require]
test = 
    pytest
    pytest-cov
